# hdmap-ir

./: CMakeLists.txt  README.md
docs/: perf_report.md  references.md
include/hdmap_ir/: geometry.h  ir.h
scripts/: format.sh  format_check.sh
src/: .clang-format  CMakeLists.txt
src/core/ir/: builder.cpp  builder.h  catalog.cpp  catalog.h  ids.h  lane.h  status.h  tile.h
src/geo/geometry/: aabb.cpp  aabb.h  segment.cpp  segment.h  vec2.cpp  vec2.h
test/: CMakeLists.txt
test/unit/geo/: test_segment.cpp  test_vec2.cpp
test/unit/ir/: test_ir_basic.cpp  test_ir_builder.cpp
